*******************************************************************************
 
 + = Additions since previous version
 ! = Bug fixes since previous version
 ~ = Changes   since previous version
 - = Features that has been removed

1.9 preview 14 (2011-03-??)
 + Osmdroid SQLite: Tile image format conversion implemented
 - Osm Hiking maps removed (excluding the "Wanderreitkarte Abo" version) 

1.9 preview 13 (2011-03-12)
 + Download to tile store without creating an atlas:  
    new atlas format "Tile store download only"
 ! BeanShell map sources could not be used with certain atlas formats
 + New map source: Israel Topo (Amudanan) with and without trails 

1.9 preview 12 (2011-03-05)
 ~ Cykloatlas: max zoom level extended to 16
 + New map source: Canada Toporama  
 + Convert an existing atlas profile to a different output format 
 ! Loading of custom CloudMade maps fixed

1.9 preview 11 (2011-03-02)
 ! Error when using a BeanShell map source with certain atlas formats
 - Removed Map+ map sources because of license problem with swisstopo

1.9 preview 10 (2011-02-28)
 ! Fixed map source: Docelu.pl
 + Bookmarks can be added (saves map position and selected map source) 
 ! Fixed map source: Cykloatlas and relief
 ! Fixed map source: Map+ (Switzerland)
 + New map source: Map+ Gelände (Switzerland)
 + New atlas format: nfComPass

1.9 preview 9 (2011-02-22)
 + New map source: Reit- und Wanderkarte (Abo) - (requires purchased ticket)
 ~ Updated New Zealand Topographic Maps url
 ! OpenStreetMap attribution + MOBAC user aget

1.9 preview 8 (2011-02-16)
 + NaviComputer: Possible to change tile image format (PNG, 4Bit-PNG, JPEG, ...)
 + OpenPisteMap: All three layers (base, contours and landshed are now supported)
 - Disabled TwoNav RMAP output format because of legal/license problems  

1.9 preview 7 (2011-02-04)
 + OSM Hiking ticket system implemented (Wanderreitkarte.de)
 ! NoSuchMethodError: mobac.program.ProgramInfo.getUserAgent()Ljava/lang/String;  
